attempting to fix bug as piechart not showing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -104,12 +104,14 @@ input[type="number"] {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
+
 .responsive-container {
   margin: 0 auto; 
   padding: 0 10px; 
   height: 400px;
   width: 99%;
 }
+
 .pie-label {
   font-size: 12px;
 }
@@ -117,8 +119,11 @@ input[type="number"] {
 @media (max-width: 810px){
   .responsive-container {
     padding: 0 5%; 
-   height:300px;
-   width: 99%
+    height: 300px;
+    width: 99%;
+  }
+  .pie-label {
+    font-size: 10px;
   }
   .charts-container {
     grid-template-columns: 1fr;
